try to use travis

--- a/.npmignore
+++ b/.npmignore
@@ -39,6 +39,11 @@ bak
 *.origin.*
 
 ########################
+# travis
+########################
+.travis.yml
+
+########################
 # bat
 ########################
 bat
