--- a/.npmignore
+++ b/.npmignore
@@ -57,7 +57,13 @@ bat
 ########################
 # source
 ########################
+src
 *.jade
 *.coffee
 *.stylus
 *.cson
+
+########################
+# gulpfile
+########################
+gulpfile.js
