--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-jquery-lite",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "Project of jquery lite for node.js.",
   "main": "./index.js",
   "repository": {
@@ -18,18 +18,21 @@
     "url": "https://github.com/phonowell/node-jquery-lite/issues"
   },
   "homepage": "https://github.com/phonowell/node-jquery-lite",
-  "scripts": {
-    "test": "test"
-  },
   "devDependencies": {
     "gulp": "^3.8.10",
-    "gulp-changed": "^1.1.0",
+    "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.2.0",
+    "gulp-coffeelint": "^0.4.0",
     "gulp-concat": "^2.4.3",
-    "gulp-express": "^0.1.4",
+    "gulp-cson": "^0.0.1",
+    "gulp-ignore": "^1.2.1",
+    "gulp-jade": "^0.10.0",
+    "gulp-plumber": "^0.6.6",
     "gulp-replace": "^0.5.0",
+    "gulp-stylus": "^1.3.6",
     "gulp-uglify": "^1.0.2",
-    "gulp-util": "^3.0.2"
+    "gulp-util": "^3.0.2",
+    "gulp-watch": "^3.0.0"
   },
   "dependencies": {
     "colors": "^1.0.3"
