--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/phonowell/node-jquery-lite",
   "devDependencies": {
+    "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
+    "gulp-callback": "0.0.3",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.2.0",
     "gulp-coffeelint": "^0.4.0",
@@ -28,13 +30,11 @@
     "gulp-ignore": "^1.2.1",
     "gulp-jade": "^0.10.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.0",
     "gulp-stylus": "^1.3.6",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.2",
     "gulp-watch": "^3.0.0"
-  },
-  "dependencies": {
-    "colors": "^1.0.3"
   }
 }
