--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-jquery-lite",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A tiny plugin for nodejs to write lines in jquery style.",
   "main": "./index.js",
   "repository": {
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/phonowell/node-jquery-lite",
   "devDependencies": {
+    "body-parser": "^1.14.1",
     "coffee-script": "^1.10.0",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
     "gulp-coffeelint": "^0.4.0",
@@ -34,6 +36,7 @@
     "gulp-watch": "^4.3.5"
   },
   "dependencies": {
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "request": "^2.65.0"
   }
 }
