--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "gulp-uglify": "^1.4.2",
     "gulp-using": "0.0.1",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "q": "^1.4.1"
   },
   "dependencies": {
     "lodash": "^3.10.1",
