--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.3.3",
   "description": "A tiny plugin for nodejs to write lines in jquery style.",
   "main": "./index.js",
+  "scripts": {
+    "test": "node test.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/phonowell/node-jquery-lite.git"
@@ -22,22 +25,23 @@
   },
   "homepage": "https://github.com/phonowell/node-jquery-lite",
   "devDependencies": {
-    "body-parser": "^1.14.1",
+    "body-parser": "^1.15.0",
     "coffee-script": "^1.10.0",
-    "express": "^4.13.3",
-    "gulp": "^3.9.0",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.1",
     "gulp-coffeelint": "^0.4.0",
     "gulp-concat": "^2.6.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-uglify": "^1.5.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-uglify": "^1.5.2",
     "gulp-using": "0.0.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "q": "^1.4.1"
   },
   "dependencies": {
+    "colors": "^1.1.2",
     "lodash": "^3.10.1",
-    "request": "^2.65.0"
+    "request": "^2.69.0"
   }
 }
