--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-jquery-lite",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "A tiny plugin for nodejs to write lines in jquery style.",
   "main": "./index.js",
   "scripts": {
@@ -33,11 +33,12 @@
     "gulp-coffeelint": "^0.4.0",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.5.2",
     "gulp-using": "0.0.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
-    "q": "^1.4.1"
+    "minimist": "^1.2.0"
   },
   "dependencies": {
     "colors": "^1.1.2",
