--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-jquery-lite",
-  "version": "0.3.14",
+  "version": "0.3.15",
   "description": "A tiny plugin for nodejs to write lines in jquery style.",
   "main": "./index.js",
   "scripts": {
@@ -31,7 +31,7 @@
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-coffeelint": "^0.4.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-include": "^2.3.1",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.5.4",
