--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.3",
-    "gulp-coffeelint": "^0.4.0",
+    "gulp-coffeelint": "^0.6.0",
     "gulp-include": "^2.3.1",
     "gulp-plumber": "^1.1.0",
     "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.4",
-    "gulp-using": "0.0.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-using": "^0.1.1",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "gulp-yaml": "^1.0.1",
