--- a/package.json
+++ b/package.json
@@ -25,21 +25,11 @@
   },
   "homepage": "https://github.com/phonowell/node-jquery-lite",
   "devDependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "coffee-script": "^1.12.2",
     "express": "^4.14.0",
-    "gulp": "^3.9.1",
-    "gulp-coffee": "^2.3.3",
-    "gulp-coffeelint": "^0.6.0",
-    "gulp-include": "^2.3.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^2.0.0",
-    "gulp-using": "^0.1.1",
-    "gulp-util": "^3.0.8",
-    "gulp-watch": "^4.3.11",
-    "gulp-yaml": "^1.0.1",
-    "minimist": "^1.2.0"
+    "fire-keeper": "phonowell/fire-keeper"
   },
   "dependencies": {
     "lodash": "^4.17.3",
