--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-jquery-lite",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "A tiny plugin for nodejs to write lines in jQuery style.",
   "main": "./index.js",
   "scripts": {
@@ -23,15 +23,11 @@
   },
   "homepage": "https://github.com/phonowell/node-jquery-lite",
   "devDependencies": {
-    "body-parser": "^1.15.2",
-    "coffee-script": "^1.12.2",
-    "express": "^4.14.0",
-    "fire-keeper": "phonowell/fire-keeper",
-    "mocha": "^3.2.0"
+    "coffee-script": "^1.12.6",
+    "fire-keeper": "^0.0.28",
+    "mocha": "^3.4.2"
   },
   "dependencies": {
-    "Deferred": "^0.1.1",
-    "lodash": "^4.17.3",
-    "request": "^2.79.0"
+    "lodash": "^4.17.4"
   }
 }
