--- a/package.json
+++ b/package.json
@@ -1,1 +1,32 @@
-{"name":"node-jquery-lite","version":"0.8.3","description":"A tiny plugin for nodejs to write lines in jQuery style.","main":"./index.js","scripts":{"test":"mocha"},"repository":{"type":"git","url":"https://github.com/phonowell/node-jquery-lite.git"},"keywords":["node-jquery-lite","nodejs","jquery"],"author":"Mimiko Phonowell <phonowell@gmail.com>","license":"MIT","url":"https://github.com/phonowell/node-jquery-lite","bugs":{"url":"https://github.com/phonowell/node-jquery-lite/issues"},"homepage":"https://github.com/phonowell/node-jquery-lite","devDependencies":{"fire-keeper":"0.0.98","mocha":"^5.0.0"},"dependencies":{"lodash":"^4.17.4"}}
+{
+  "name": "node-jquery-lite",
+  "version": "0.8.4",
+  "description": "A tiny plugin for nodejs to write lines in jQuery style.",
+  "main": "./index.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/phonowell/node-jquery-lite.git"
+  },
+  "keywords": [
+    "node-jquery-lite",
+    "nodejs",
+    "jquery"
+  ],
+  "author": "Mimiko Phonowell <phonowell@gmail.com>",
+  "license": "MIT",
+  "url": "https://github.com/phonowell/node-jquery-lite",
+  "bugs": {
+    "url": "https://github.com/phonowell/node-jquery-lite/issues"
+  },
+  "homepage": "https://github.com/phonowell/node-jquery-lite",
+  "devDependencies": {
+    "fire-keeper": "0.0.107",
+    "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10"
+  }
+}
